tests/script_errors/const_expr_unknown_key/error.txt
Error: 
    1 | {"snot": "badger"}.bad_key
      |                    ^^^^^^^ Trying to access a non existing local key `bad_key`
